packages/daisyui/src/components/calendar.css
/* ... */
.pika-single {
  @layer daisyui.l1.l2.l3 {
    &:is(div) {
      user-select: none;
      font-size: 0.75rem;
      z-index: 999;
      display: inline-block;
      position: relative;
      color: var(--color-base-content);
      background-color: var(--color-base-100);
      border-radius: var(--radius-box);
      border: var(--border) solid var(--color-base-200);
      padding: 0.5rem;
      &:before,
      &:after {
        content: "";
        display: table;
      }
      &:after {
        clear: both;
      }

      &.is-hidden {
        display: none;
      }

      &.is-bound {
        position: absolute;
      }

      .pika-lendar {
        float: left;
      }

      .pika-title {
        position: relative;
        text-align: center;
      }

      .pika-label {
        display: inline-block;
        position: relative;
        z-index: 999;
        overflow: hidden;
        margin: 0;
        padding: 5px 3px;
        background-color: var(--color-base-100);
      }
      .pika-title {
        select {
          cursor: pointer;
          position: absolute;
          z-index: 999;
          margin: 0;
          left: 0;
          top: 5px;
          opacity: 0;
        }
      }

      .pika-prev,
      .pika-next {
        display: block;
        cursor: pointer;
        position: absolute;
        top: 0;
        outline: none;
        border: 0;
        width: 2.25rem;
        height: 2.25rem;
        color: #0000;
        font-size: 1.2em;
        border-radius: var(--radius-field);
        &:hover {
          background-color: var(--color-base-200);
        }
        &.is-disabled {
          cursor: default;
          opacity: 0.2;
        }
        &:before {
          display: inline-block;
          width: 2.25rem;
          height: 2.25rem;
          line-height: 2.25;
          color: var(--color-base-content);
        }
      }
      .pika-prev {
        left: 0;
        &:before {
          --tw-content: "‹";
          content: var(--tw-content);
        }
      }

      .pika-next {
        right: 0;
        &:before {
          --tw-content: "›";
          content: var(--tw-content);
        }
      }

      .pika-select {
        display: inline-block;
      }

      .pika-table {
        width: 100%;
        border-collapse: collapse;
        border-spacing: 0;
        border: 0;
      }
      .pika-table {
        th,
        td {
          padding: 0;
        }
        th {
          opacity: 0.6;
          text-align: center;
          width: 2.25rem;
          height: 2.25rem;
        }
      }

      .pika-button {
        cursor: pointer;
        display: block;
        outline: none;
        border: 0;
        margin: 0;
        width: 2.25rem;
        height: 2.25rem;
        padding: 5px;
        text-align: right;
        text-align: center;
      }

      .pika-week {
        color: var(--color-base-content);
      }

      .is-today {
        .pika-button {
          background: var(--color-primary);
          color: var(--color-primary-content);
        }
      }
      .is-selected,
      .has-event {
        .pika-button {
          &,
          &:hover {
            color: var(--color-base-100);
            background-color: var(--color-base-content);
            border-radius: var(--radius-field);
          }
        }
      }

      .has-event {
        .pika-button {
          background: var(--color-base-primary);
        }
      }

      .is-disabled,
      .is-inrange {
        .pika-button {
          background: var(--color-base-primary);
        }
      }

      .is-startrange {
        .pika-button {
          color: var(--color-base-100);
          background: var(--color-base-content);
          border-radius: var(--radius-field);
        }
      }

      .is-endrange {
        .pika-button {
          color: var(--color-base-100);
          background: var(--color-base-content);
          border-radius: var(--radius-field);
        }
      }

      .is-disabled {
        .pika-button {
          pointer-events: none;
          cursor: default;
          color: var(--color-base-content);
          opacity: 0.3;
        }
      }

      .is-outside-current-month {
        .pika-button {
          color: var(--color-base-content);
          opacity: 0.3;
        }
      }

      .is-selection-disabled {
        pointer-events: none;
        cursor: default;
      }

      .pika-button:hover,
      .pika-row.pick-whole-week:hover .pika-button {
        color: var(--color-base-content);
        background-color: var(--color-base-200);
        border-radius: var(--radius-field);
      }
      .pika-table abbr {
        text-decoration: none;
        font-weight: normal;
      }
    }
  }
}

